--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -10,7 +10,7 @@ body {
     "sidebar header"
     "sidebar main"
     "sidebar  player";
-  min-height: 100vh;
+  height: 100vh;
   background-color: $color-bg-sidebar;
   color: $color-text-primary;
   font-family: $font-family-base;
